Add guidelines and case_studies sections

--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -2,6 +2,10 @@
 subitems:
   - title: Home
     url: /index
+  - title: Guidelines
+    url: /guidelines
+  - title: Case studies
+    url: /case_studies
   - title: Training materials
     url: /training_materials
   - title: About
