Rename Training materials to Test

--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -6,7 +6,7 @@ subitems:
     url: /guidelines
   - title: Case studies
     url: /case_studies
-  - title: Training materials
+  - title: (Test)
     url: /training_materials
   - title: About
     url: /about
