--- a/_data/CONTRIBUTORS.yaml
+++ b/_data/CONTRIBUTORS.yaml
@@ -14,42 +14,42 @@ Xenia Perez Sitja:
     git: sitjart
     email: 
     orcid: 
-    role: 
-    affiliation: University of Bradford/ELIXIR-UK
+    role: contributor
+    affiliation: 
 Ivan Mičetić:
     git: ivanmicetic
     orcid: 
-    role: 
+    role: contributor
     affiliation: 
 Freya Vamberg Delfs Thrane:
     git: FreyaVDT
-    role: 
+    role: contributor
     orcid: 
     affiliation: 
 Federico Bianchini:
     git: bianchini88
-    role: 
+    role: contributor
     orcid: 
     affiliation: 
 Mijke Jetten:
     git: MijkeJetten
-    role: 
+    role: contributor
     image_url:
 Minna Ahokas:
     git: minnami
-    role: 
+    role: contributor
     image_url: 
 Vilem Ded:
     git: vildead
-    role: 
+    role: contributor
     image_url:
 Bojan Kverh:
     git: 
-    role: 
+    role: contributor
     image_url:
 Carmen Reverté:
     git: 
-    role: 
+    role: contributor
     image_url:
 Flavio Licciulli:
     git: 
@@ -57,41 +57,41 @@ Flavio Licciulli:
     image_url:
 Helena Schnitzer:
     git: HelenaSchnitzer
-    role: 
+    role: contributor
     image_url: 
 Laura Portell Silva:
     git: lauportell
-    role: 
+    role: contributor
     image_url: 
 Diana Pilvar:
     git: diana-pilvar
-    role: 
+    role: contributor
     image_url: 
 Marina Popleteeva:
     git: marikapop
-    role: 
+    role: contributor
     image_url: 
 Amir Szitenberg:
     git: 
-    role: 
+    role: contributor
     image_url: 
 Jeanne Wilbrandt:
     git: RDMJeanne
-    role: 
+    role: contributor
     image_url: 
 Nazeefa Fatima:
     git: Nazeeefa
-    role: 
+    role: contributor
     image_url: 
 Niclas Jareborg:
     git: nicjar
-    role: 
+    role: contributor
     image_url: 
 Brane Leskošek:
     git: 
-    role: 
+    role: contributor
     image_url: 
 Bert Droesbeke:
     git: bedroesb
-    role: 
+    role: contributor
     image_url: 
