--- a/_data/CONTRIBUTORS.yaml
+++ b/_data/CONTRIBUTORS.yaml
@@ -95,3 +95,39 @@ Bert Droesbeke:
     git: bedroesb
     role: contributor
     image_url: 
+Fieke Schoots :
+    git: 
+    role: contributor
+    image_url: 
+Robert Andrew :
+    git: 
+    role: contributor
+    image_url: 
+Jorge Olivira :
+    git: 
+    role: contributor
+    image_url: 
+Daniel Faria:
+    git: 
+    role: contributor
+    image_url: 
+Aina Jene:
+    git: ainajene
+    role: contributor
+    image_url: 
+Polonca Ferk:
+    git: 
+    role: contributor
+    image_url: 
+Siiri Fuchs:
+    git: 
+    role: contributor
+    image_url: 
+ Nils-Christian Lübke:
+    git: 
+    role: contributor
+    image_url: 
+Pinar Alper:
+    git: 
+    role: contributor
+    image_url: 
