--- a/_data/CONTRIBUTORS.yaml
+++ b/_data/CONTRIBUTORS.yaml
@@ -58,23 +58,28 @@ Flavio Licciulli:
 Helena Schnitzer:
     git: HelenaSchnitzer
     role: contributor
-    image_url: 
 Laura Portell Silva:
     git: lauportell
     role: contributor
     image_url: 
 Diana Pilvar:
     git: diana-pilvar
+    email: diana.pilvar@ut.ee
+    orcid: 0000-0002-5788-2687
     role: contributor
-    image_url: 
 Marina Popleteeva:
     git: marikapop
     role: contributor
-    image_url: 
-Amir Szitenberg:
-    git: 
+    email: marina.popleteeva@lih.lu
+    orcid: 0000-0002-8409-6147
+Nazeefa Fatima:
+    git: Nazeeefa
+    orcid: 0000-0001-7791-4984
     role: contributor
-    image_url: 
+Amir Szitenberg:
+    git: szitenberg
+    orcid: 0000-0002-7309-2845
+    role: contributor
 Jeanne Wilbrandt:
     git: RDMJeanne
     role: contributor
@@ -85,8 +90,9 @@ Nazeefa Fatima:
     image_url: 
 Niclas Jareborg:
     git: nicjar
+    email: niclas.jareborg@nbis.se
+    orcid: 0000-0002-4520-044X
     role: contributor
-    image_url: 
 Brane Leskošek:
     git: 
     role: contributor
@@ -131,3 +137,27 @@ Pinar Alper:
     git: 
     role: contributor
     image_url: 
+Teresa D'Altri:
+    git: TeresaDAltri
+    orcid: 0000-0002-8146-5365
+    role: contributor
+Paulette Lieby:
+    git: froggypaule
+    orcid: 0000-0002-9289-9652
+    email: paulette.lieby@france-bioinformatique.fr
+    role: contributor
+Gil Poiares-Oliveira:
+    git: GilOliveira
+    orcid: 0000-0003-4638-2879
+    email: gpo@biodata.pt
+    role: contributor
+Katharina Friedlinde Heil:
+    git: 
+    orcid: 0000-0003-3341-3736
+    email: kfheil@ebi.ac.uk
+    role: contributor
+Elin Kronander:
+    git: elinkronander
+    email: elin.kronander@nbis.se
+    orcid: 0000-0003-0280-6318
+    role: contributor
